Update Run_Selection.sh and ResultReader.ipynb for High Mass Cut Analysis
- Modified Run_Selection.sh to include new input files for analysis and updated output file names to reflect changes in the analysis process.
- Adjusted ResultReader.ipynb to correct execution counts, update yield calculations, and modify the output for HZ4l and ZWW4l datasets.
- Changed the yield calculation method to use 'Status_05_NotZ_dR' instead of 'Status_07_NotZ_MassThreshold' for more accurate results.

--- a/Analysis/PythonWorkBench/ResultReader.ipynb
+++ b/Analysis/PythonWorkBench/ResultReader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "5e4791e4",
    "metadata": {},
    "outputs": [
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "ebaac548",
    "metadata": {},
    "outputs": [
@@ -542,16 +542,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HLFV_110GeV yield at 1ab^-1: 0.576983\n",
-      "HLFV_115GeV yield at 1ab^-1: 0.575509\n",
-      "HLFV_120GeV yield at 1ab^-1: 0.572547\n",
-      "HLFV_125GeV yield at 1ab^-1: 0.570358\n",
-      "HLFV_130GeV yield at 1ab^-1: 0.568789\n",
-      "HLFV_135GeV yield at 1ab^-1: 0.566312\n",
-      "HLFV_140GeV yield at 1ab^-1: 0.563238\n",
-      "HLFV_145GeV yield at 1ab^-1: 0.559844\n",
-      "HZ4l yield at 1ab^-1: 0.005594000000000001\n",
-      "ZWW4l yield at 1ab^-1: 0.005634953999999999\n"
+      "HLFV_110GeV yield at 1ab^-1: 0.580589\n",
+      "HLFV_115GeV yield at 1ab^-1: 0.578915\n",
+      "HLFV_120GeV yield at 1ab^-1: 0.575716\n",
+      "HLFV_125GeV yield at 1ab^-1: 0.573374\n",
+      "HLFV_130GeV yield at 1ab^-1: 0.571782\n",
+      "HLFV_135GeV yield at 1ab^-1: 0.569267\n",
+      "HLFV_140GeV yield at 1ab^-1: 0.566225\n",
+      "HLFV_145GeV yield at 1ab^-1: 0.563084\n",
+      "HZ4l yield at 1ab^-1: 0.15070236\n",
+      "ZWW4l yield at 1ab^-1: 0.145171377\n"
      ]
     }
    ],
@@ -560,7 +560,7 @@
     "signalType=[\"HLFV_110GeV\",\"HLFV_115GeV\",\"HLFV_120GeV\",\"HLFV_125GeV\",\"HLFV_130GeV\",\"HLFV_135GeV\",\"HLFV_140GeV\",\"HLFV_145GeV\",\"HZ4l\",\"ZWW4l\"]\n",
     "for key in signalType:\n",
     "    total_events = 1000000  # Assuming each dataset has 1 million events\n",
-    "    passed_events = ak.sum(raw_data[key]['Status_07_NotZ_MassThreshold'])\n",
+    "    passed_events = ak.sum(raw_data[key]['Status_05_NotZ_dR'])\n",
     "    if key not in [\"HZ4l\", \"ZWW4l\"]:\n",
     "        yield_value = passed_events / total_events\n",
     "        # print(f\"{key}:{yield_value}\")\n",
@@ -577,8 +577,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "7cbf0bcd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HLFV_110GeV Pass: 580589\n",
+      "HLFV_115GeV Pass: 578915\n",
+      "HLFV_120GeV Pass: 575716\n",
+      "HLFV_125GeV Pass: 573374\n",
+      "HLFV_130GeV Pass: 571782\n",
+      "HLFV_135GeV Pass: 569267\n",
+      "HLFV_140GeV Pass: 566225\n",
+      "HLFV_145GeV Pass: 563084\n",
+      "HZ4l Pass: 53880\n",
+      "ZWW4l Pass: 53947\n"
+     ]
+    }
+   ],
+   "source": [
+    "# calculate yield of 05_NotZ_dR cut\n",
+    "signalType=[\"HLFV_110GeV\",\"HLFV_115GeV\",\"HLFV_120GeV\",\"HLFV_125GeV\",\"HLFV_130GeV\",\"HLFV_135GeV\",\"HLFV_140GeV\",\"HLFV_145GeV\",\"HZ4l\",\"ZWW4l\"]\n",
+    "for key in signalType:\n",
+    "    total_events = 1000000  # Assuming each dataset has 1 million events\n",
+    "    passed_events = ak.sum(raw_data[key]['Status_05_NotZ_dR'])\n",
+    "    if key not in [\"HZ4l\", \"ZWW4l\"]:\n",
+    "        yield_value = passed_events / total_events\n",
+    "        # print(f\"{key}:{yield_value}\")\n",
+    "    \n",
+    "    elif key == \"HZ4l\":\n",
+    "        luminosity = total_events # N=xsec * luminosity\n",
+    "        yield_value =  passed_events/luminosity # scale to 1ab^-1 luminosity\n",
+    "        \n",
+    "    elif key == \"ZWW4l\":\n",
+    "        luminosity = total_events # N=xsec * luminosity\n",
+    "        yield_value =  passed_events/luminosity # scale to 1ab^-1 luminosity\n",
+    "    print(f\"{key} Pass: {passed_events}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0b11c34",
    "metadata": {},
    "outputs": [],
    "source": []
