--- a/Analysis/loop_scratch_V2.ipynb
+++ b/Analysis/loop_scratch_V2.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "b663c8fa",
    "metadata": {},
    "outputs": [
@@ -231,11 +231,12 @@
     "\n",
     "\n",
     "    additional_fields[\"Z_selectionMass\"]=ak.where(~ak.is_none(bothZmasses[\"Electron\"]),bothZmasses[\"Electron\"],bothZmasses[\"Muon\"])\n",
-    "    additional_fields[\"Higgs_recoiledMass\"]=ak.firsts(ak.where(~ak.is_none(bothZmasses[\"Electron\"]),bothReHiggsMass[\"Electron\"],bothReHiggsMass[\"Muon\"]))\n",
+    "    # additional_fields[\"Higgs_recoiledMass\"]=ak.firsts(ak.where(~ak.is_none(bothZmasses[\"Electron\"]),bothReHiggsMass[\"Electron\"],bothReHiggsMass[\"Muon\"]))\n",
     "    additional_fields[\"Higgs_reconstructedMass\"]=ak.where(~ak.is_none(bothHiggsMass[\"Electron\"]),bothHiggsMass[\"Electron\"],bothHiggsMass[\"Muon\"])\n",
-    "    additional_fields[\"Higgs_selectionMass\"]=BestHiggsPairMass\n",
-    "    additional_fields[\"Z_recoiledMass\"]=ak.firsts(ZRecoiledMass)\n",
-    "    additional_fields[\"Z_reconstructedMass\"]=ak.firsts(ZpairMass)\n",
+    "    # additional_fields[\"Higgs_selectionMass\"]=BestHiggsPairMass\n",
+    "    # additional_fields[\"Z_recoiledMass\"]=ak.firsts(ZRecoiledMass)\n",
+    "    # additional_fields[\"Z_reconstructedMass\"]=ak.firsts(ZpairMass)\n",
+    "    additional_fields[\"Z_Windows\"]=abs((additional_fields[\"Z_selectionMass\"] - Z_MASS))<10\n",
     "    # Add all new fields to the array at once\n",
     "    for field_name, field_values in additional_fields.items():\n",
     "        raw_data[name] = ak.with_field(raw_data[name], field_values, field_name)\n",
@@ -244,7 +245,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
+   "id": "56a640f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "234196"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ak.sum(raw_data['ZWW4Lep']['Z_Windows'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "cf8728fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ak.sum(abs(raw_data['ZWW4Lep']['Higgs_reconstructedMass'][raw_data['ZWW4Lep']['Z_Windows']] - 120.0) < 10.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "46a51268",
    "metadata": {},
    "outputs": [
@@ -284,9 +327,79 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f7047d8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['MissingET_size',\n",
+       " 'MissingET.Eta',\n",
+       " 'MissingET.Phi',\n",
+       " 'MissingET.MET',\n",
+       " 'Jet_size',\n",
+       " 'Jet.Phi',\n",
+       " 'Jet.Eta',\n",
+       " 'Jet.PT',\n",
+       " 'Jet.Mass',\n",
+       " 'Electron_size',\n",
+       " 'Electron.Eta',\n",
+       " 'Electron.Phi',\n",
+       " 'Electron.PT',\n",
+       " 'Electron.Charge',\n",
+       " 'Muon_size',\n",
+       " 'Muon.Eta',\n",
+       " 'Muon.Phi',\n",
+       " 'Muon.PT',\n",
+       " 'Muon.Charge',\n",
+       " 'LestLeptonPT10GeV',\n",
+       " '4LepEvent',\n",
+       " 'OddNumberLep',\n",
+       " 'NonChargeViolation',\n",
+       " 'Z_selectionMass',\n",
+       " 'Higgs_recoiledMass',\n",
+       " 'Higgs_reconstructedMass',\n",
+       " 'Higgs_selectionMass',\n",
+       " 'Z_recoiledMass',\n",
+       " 'Z_reconstructedMass']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "This_data.fields"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "78def08a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FieldNotFoundError",
+     "evalue": "no field '3rdCut' in record with 29 fields",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFieldNotFoundError\u001b[0m                        Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 8\u001b[0m\n\u001b[1;32m      6\u001b[0m This_data\u001b[38;5;241m=\u001b[39mraw_data[data_key]\n\u001b[1;32m      7\u001b[0m This_HiggsMass\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mfloat\u001b[39m(data_key[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m3\u001b[39m:])\n\u001b[0;32m----> 8\u001b[0m added_field[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m4thCut\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m=\u001b[39m(\u001b[38;5;28mabs\u001b[39m(This_data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHiggs_reconstructedMass\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m-\u001b[39m This_HiggsMass) \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m8.5\u001b[39m) \u001b[38;5;241m&\u001b[39m \u001b[43mThis_data\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m3rdCut\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[1;32m      9\u001b[0m added_field[\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m4thCut_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdata_key[\u001b[38;5;241m4\u001b[39m:]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_HZ4L\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m=\u001b[39m(\u001b[38;5;28mabs\u001b[39m(raw_data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHZ4Lep\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mZ_reconstructedMass\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m-\u001b[39m This_HiggsMass) \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m8.5\u001b[39m) \u001b[38;5;241m&\u001b[39m raw_data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHZ4Lep\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m3rdCut\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m     10\u001b[0m added_field[\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m4thCut_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdata_key[\u001b[38;5;241m4\u001b[39m:]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_ZWW4L\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m=\u001b[39m(\u001b[38;5;28mabs\u001b[39m(raw_data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mZWW4Lep\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mZ_reconstructedMass\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m-\u001b[39m This_HiggsMass) \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m8.5\u001b[39m) \u001b[38;5;241m&\u001b[39m raw_data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mZWW4Lep\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m3rdCut\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
+      "File \u001b[0;32m~/.conda/envs/HEP/lib/python3.10/site-packages/awkward/highlevel.py:1104\u001b[0m, in \u001b[0;36mArray.__getitem__\u001b[0;34m(self, where)\u001b[0m\n\u001b[1;32m    675\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__getitem__\u001b[39m(\u001b[38;5;28mself\u001b[39m, where):\n\u001b[1;32m    676\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    677\u001b[0m \u001b[38;5;124;03m    Args:\u001b[39;00m\n\u001b[1;32m    678\u001b[0m \u001b[38;5;124;03m        where (many types supported; see below): Index of positions to\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1102\u001b[0m \u001b[38;5;124;03m    have the same dimension as the array being indexed.\u001b[39;00m\n\u001b[1;32m   1103\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m-> 1104\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m ak\u001b[38;5;241m.\u001b[39m_errors\u001b[38;5;241m.\u001b[39mSlicingErrorContext(\u001b[38;5;28mself\u001b[39m, where):\n\u001b[1;32m   1105\u001b[0m         \u001b[38;5;66;03m# Handle named axis\u001b[39;00m\n\u001b[1;32m   1106\u001b[0m         (_, ndim) \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_layout\u001b[38;5;241m.\u001b[39mminmax_depth\n\u001b[1;32m   1107\u001b[0m         named_axis \u001b[38;5;241m=\u001b[39m _get_named_axis(\u001b[38;5;28mself\u001b[39m)\n",
+      "File \u001b[0;32m~/.conda/envs/HEP/lib/python3.10/site-packages/awkward/_errors.py:80\u001b[0m, in \u001b[0;36mErrorContext.__exit__\u001b[0;34m(self, exception_type, exception_value, traceback)\u001b[0m\n\u001b[1;32m     78\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_slate\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__dict__\u001b[39m\u001b[38;5;241m.\u001b[39mclear()\n\u001b[1;32m     79\u001b[0m     \u001b[38;5;66;03m# Handle caught exception\u001b[39;00m\n\u001b[0;32m---> 80\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdecorate_exception(exception_type, exception_value)\n\u001b[1;32m     81\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     82\u001b[0m     \u001b[38;5;66;03m# Step out of the way so that another ErrorContext can become primary.\u001b[39;00m\n\u001b[1;32m     83\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mprimary() \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28mself\u001b[39m:\n",
+      "File \u001b[0;32m~/.conda/envs/HEP/lib/python3.10/site-packages/awkward/highlevel.py:1112\u001b[0m, in \u001b[0;36mArray.__getitem__\u001b[0;34m(self, where)\u001b[0m\n\u001b[1;32m   1108\u001b[0m where \u001b[38;5;241m=\u001b[39m _normalize_named_slice(named_axis, where, ndim)\n\u001b[1;32m   1110\u001b[0m NamedAxis\u001b[38;5;241m.\u001b[39mmapping \u001b[38;5;241m=\u001b[39m named_axis\n\u001b[0;32m-> 1112\u001b[0m indexed_layout \u001b[38;5;241m=\u001b[39m prepare_layout(\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_layout\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_getitem\u001b[49m\u001b[43m(\u001b[49m\u001b[43mwhere\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mNamedAxis\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m   1114\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m NamedAxis\u001b[38;5;241m.\u001b[39mmapping:\n\u001b[1;32m   1115\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m ak\u001b[38;5;241m.\u001b[39moperations\u001b[38;5;241m.\u001b[39mak_with_named_axis\u001b[38;5;241m.\u001b[39m_impl(\n\u001b[1;32m   1116\u001b[0m         indexed_layout,\n\u001b[1;32m   1117\u001b[0m         named_axis\u001b[38;5;241m=\u001b[39mNamedAxis\u001b[38;5;241m.\u001b[39mmapping,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1120\u001b[0m         attrs\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_attrs,\n\u001b[1;32m   1121\u001b[0m     )\n",
+      "File \u001b[0;32m~/.conda/envs/HEP/lib/python3.10/site-packages/awkward/contents/content.py:551\u001b[0m, in \u001b[0;36mContent._getitem\u001b[0;34m(self, where, named_axis)\u001b[0m\n\u001b[1;32m    548\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem((where,), named_axis)\n\u001b[1;32m    550\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(where, \u001b[38;5;28mstr\u001b[39m):\n\u001b[0;32m--> 551\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_getitem_field\u001b[49m\u001b[43m(\u001b[49m\u001b[43mwhere\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    553\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m where \u001b[38;5;129;01mis\u001b[39;00m np\u001b[38;5;241m.\u001b[39mnewaxis:\n\u001b[1;32m    554\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem((where,), named_axis)\n",
+      "File \u001b[0;32m~/.conda/envs/HEP/lib/python3.10/site-packages/awkward/contents/recordarray.py:484\u001b[0m, in \u001b[0;36mRecordArray._getitem_field\u001b[0;34m(self, where, only_fields)\u001b[0m\n\u001b[1;32m    480\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_getitem_field\u001b[39m(\n\u001b[1;32m    481\u001b[0m     \u001b[38;5;28mself\u001b[39m, where: \u001b[38;5;28mstr\u001b[39m \u001b[38;5;241m|\u001b[39m SupportsIndex, only_fields: \u001b[38;5;28mtuple\u001b[39m[\u001b[38;5;28mstr\u001b[39m, \u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m] \u001b[38;5;241m=\u001b[39m ()\n\u001b[1;32m    482\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Content:\n\u001b[1;32m    483\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(only_fields) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m--> 484\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcontent\u001b[49m\u001b[43m(\u001b[49m\u001b[43mwhere\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    486\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    487\u001b[0m         nexthead, nexttail \u001b[38;5;241m=\u001b[39m ak\u001b[38;5;241m.\u001b[39m_slicing\u001b[38;5;241m.\u001b[39mhead_tail(only_fields)\n",
+      "File \u001b[0;32m~/.conda/envs/HEP/lib/python3.10/site-packages/awkward/contents/recordarray.py:417\u001b[0m, in \u001b[0;36mRecordArray.content\u001b[0;34m(self, index_or_field)\u001b[0m\n\u001b[1;32m    416\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcontent\u001b[39m(\u001b[38;5;28mself\u001b[39m, index_or_field: \u001b[38;5;28mstr\u001b[39m \u001b[38;5;241m|\u001b[39m SupportsIndex) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Content:\n\u001b[0;32m--> 417\u001b[0m     out \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcontent\u001b[49m\u001b[43m(\u001b[49m\u001b[43mindex_or_field\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    418\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m (\n\u001b[1;32m    419\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlength \u001b[38;5;129;01mis\u001b[39;00m unknown_length\n\u001b[1;32m    420\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m out\u001b[38;5;241m.\u001b[39mlength \u001b[38;5;129;01mis\u001b[39;00m unknown_length\n\u001b[1;32m    421\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m out\u001b[38;5;241m.\u001b[39mlength \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlength\n\u001b[1;32m    422\u001b[0m     ):\n\u001b[1;32m    423\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m out\n",
+      "File \u001b[0;32m~/.conda/envs/HEP/lib/python3.10/site-packages/awkward/_meta/recordmeta.py:140\u001b[0m, in \u001b[0;36mRecordMeta.content\u001b[0;34m(self, index_or_field)\u001b[0m\n\u001b[1;32m    138\u001b[0m     index \u001b[38;5;241m=\u001b[39m index_or_field\n\u001b[1;32m    139\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(index_or_field, \u001b[38;5;28mstr\u001b[39m):\n\u001b[0;32m--> 140\u001b[0m     index \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfield_to_index\u001b[49m\u001b[43m(\u001b[49m\u001b[43mindex_or_field\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    141\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    142\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\n\u001b[1;32m    143\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mindex_or_field must be an integer (index) or string (field), not \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mindex_or_field\u001b[38;5;132;01m!r}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    144\u001b[0m     )\n",
+      "File \u001b[0;32m~/.conda/envs/HEP/lib/python3.10/site-packages/awkward/_meta/recordmeta.py:121\u001b[0m, in \u001b[0;36mRecordMeta.field_to_index\u001b[0;34m(self, field)\u001b[0m\n\u001b[1;32m    119\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    120\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m i\n\u001b[0;32m--> 121\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m FieldNotFoundError(\n\u001b[1;32m    122\u001b[0m     \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mno field \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfield\u001b[38;5;132;01m!r}\u001b[39;00m\u001b[38;5;124m in record with \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_contents)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m fields\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    123\u001b[0m )\n",
+      "\u001b[0;31mFieldNotFoundError\u001b[0m: no field '3rdCut' in record with 29 fields",
+      "\u001b[0m\nThis error occurred while attempting to slice\n\n    <Array [{MissingET_size: 1, ...}, ..., {...}] type='1000000 * {MissingE...'>\n\nwith\n\n    '3rdCut'"
+     ]
+    }
+   ],
    "source": [
     "# Additional Selection\n",
     "for data_key in raw_data.keys():\n",
@@ -781,6 +894,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
