Refactor code structure for improved readability and maintainability

--- a/Analysis/PythonWorkBench/Off-shell_Analysis.ipynb
+++ b/Analysis/PythonWorkBench/Off-shell_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "4b61c1d3",
    "metadata": {},
    "outputs": [
@@ -11,9 +11,13 @@
      "output_type": "stream",
      "text": [
       "/work/project/escience/ruttho/FCC-ee_SimpleDelphesAnalysis/Analysis\n",
-      "Loading data from Bg1_hz.root...\n",
-      "Loading data from Bg2_zww.root...\n",
-      "Loading data from /work/project/escience/ruttho/FCC-ee_SimpleDelphesAnalysis/EventSample/MassScan_HZ4l_HLFV/HZ4l_HLFV_1M_HMass125_Seed125/HZ4l_HLFV_1M_HMass125_Seed125_IDEA.root...\n"
+      "Loading data from /work/project/escience/ruttho/FCC-ee_SimpleDelphesAnalysis/EventSample/MassScan_HZ4l_HLFV/HZ4l_HLFV_1M_HMass150_Seed150/HZ4l_HLFV_1M_HMass150_Seed150_IDEA.root...\n",
+      "Loading data from /work/project/escience/ruttho/FCC-ee_SimpleDelphesAnalysis/EventSample/MassScan_HZ4l_HLFV/HZ4l_HLFV_1M_HMass155_Seed155/HZ4l_HLFV_1M_HMass155_Seed155_IDEA.root...\n",
+      "Loading data from /work/project/escience/ruttho/FCC-ee_SimpleDelphesAnalysis/EventSample/MassScan_HZ4l_HLFV/HZ4l_HLFV_1M_HMass160_Seed160/HZ4l_HLFV_1M_HMass160_Seed160_IDEA.root...\n",
+      "Loading data from /work/project/escience/ruttho/FCC-ee_SimpleDelphesAnalysis/Analysis/HighMassCut/zh_ll_tautau.root...\n",
+      "Loading data from /work/project/escience/ruttho/FCC-ee_SimpleDelphesAnalysis/Analysis/HighMassCut/zh_ll_ww.root...\n",
+      "Loading data from /work/project/escience/ruttho/FCC-ee_SimpleDelphesAnalysis/Analysis/HighMassCut/zz_ll_tautau.root...\n",
+      "Loading data from /work/project/escience/ruttho/FCC-ee_SimpleDelphesAnalysis/EventSample/ZWWFourLepton_1M_Seed30/ZWWFourLepton_1M_Seed30.root...\n"
      ]
     }
    ],
@@ -54,24 +58,21 @@
     "    return data\n",
     "\n",
     "# Configuration\n",
-    "TESTING_MODE = False\n",
-    "MAX_EVENTS = 100000 if TESTING_MODE else None\n",
+    "TESTING_MODE = True\n",
+    "MAX_EVENTS = 10000 if TESTING_MODE else None\n",
     "OUTPUT_DIR = \"figure/test\"\n",
     "os.makedirs(OUTPUT_DIR, exist_ok=True)\n",
     "\n",
     "\n",
     "file_paths = {\n",
-    "    \"HZ4Lep\": \"Bg1_hz.root\",\n",
-    "    \"ZWW4Lep\": \"Bg2_zww.root\",\n",
-    "    # \"LFV_hm110\": \"/work/project/escience/ruttho/FCC-ee_SimpleDelphesAnalysis/EventSample/MassScan_HZ4l_HLFV/HZ4l_HLFV_1M_HMass110_Seed110/HZ4l_HLFV_1M_HMass110_Seed110_IDEA.root\",\n",
-    "    # \"LFV_hm115\": \"/work/project/escience/ruttho/FCC-ee_SimpleDelphesAnalysis/EventSample/MassScan_HZ4l_HLFV/HZ4l_HLFV_1M_HMass115_Seed115/HZ4l_HLFV_1M_HMass115_Seed115_IDEA.root\",\n",
-    "    # \"LFV_hm120\": \"/work/project/escience/ruttho/FCC-ee_SimpleDelphesAnalysis/EventSample/MassScan_HZ4l_HLFV/HZ4l_HLFV_1M_HMass120_Seed120/HZ4l_HLFV_1M_HMass120_Seed120_IDEA.root\",\n",
-    "    \"LFV_hm125\": \"/work/project/escience/ruttho/FCC-ee_SimpleDelphesAnalysis/EventSample/MassScan_HZ4l_HLFV/HZ4l_HLFV_1M_HMass125_Seed125/HZ4l_HLFV_1M_HMass125_Seed125_IDEA.root\",\n",
-    "    # \"LFV_hm130\": \"/work/project/escience/ruttho/FCC-ee_SimpleDelphesAnalysis/EventSample/MassScan_HZ4l_HLFV/HZ4l_HLFV_1M_HMass130_Seed130/HZ4l_HLFV_1M_HMass130_Seed130_IDEA.root\",\n",
-    "    # \"LFV_hm135\": \"/work/project/escience/ruttho/FCC-ee_SimpleDelphesAnalysis/EventSample/MassScan_HZ4l_HLFV/HZ4l_HLFV_1M_HMass135_Seed135/HZ4l_HLFV_1M_HMass135_Seed135_IDEA.root\",\n",
-    "    # \"LFV_hm140\": \"/work/project/escience/ruttho/FCC-ee_SimpleDelphesAnalysis/EventSample/MassScan_HZ4l_HLFV/HZ4l_HLFV_1M_HMass140_Seed140/HZ4l_HLFV_1M_HMass140_Seed140_IDEA.root\",\n",
-    "    # \"LFV_hm145\": \"/work/project/escience/ruttho/FCC-ee_SimpleDelphesAnalysis/EventSample/MassScan_HZ4l_HLFV/HZ4l_HLFV_1M_HMass145_Seed145/HZ4l_HLFV_1M_HMass145_Seed145_IDEA.root\"\n",
-    "}\n",
+    "    \"HLFV_150GeV\" : \"/work/project/escience/ruttho/FCC-ee_SimpleDelphesAnalysis/EventSample/MassScan_HZ4l_HLFV/HZ4l_HLFV_1M_HMass150_Seed150/HZ4l_HLFV_1M_HMass150_Seed150_IDEA.root\",\n",
+    "    \"HLFV_155GeV\" : \"/work/project/escience/ruttho/FCC-ee_SimpleDelphesAnalysis/EventSample/MassScan_HZ4l_HLFV/HZ4l_HLFV_1M_HMass155_Seed155/HZ4l_HLFV_1M_HMass155_Seed155_IDEA.root\",\n",
+    "    \"HLFV_160GeV\" : \"/work/project/escience/ruttho/FCC-ee_SimpleDelphesAnalysis/EventSample/MassScan_HZ4l_HLFV/HZ4l_HLFV_1M_HMass160_Seed160/HZ4l_HLFV_1M_HMass160_Seed160_IDEA.root\",\n",
+    "    \"zh_ll_tautau\" : '/work/project/escience/ruttho/FCC-ee_SimpleDelphesAnalysis/Analysis/HighMassCut/zh_ll_tautau.root',\n",
+    "    \"zh_ll_ww\" : \"/work/project/escience/ruttho/FCC-ee_SimpleDelphesAnalysis/Analysis/HighMassCut/zh_ll_ww.root\",\n",
+    "    \"zz_ll_tautau\" : \"/work/project/escience/ruttho/FCC-ee_SimpleDelphesAnalysis/Analysis/HighMassCut/zz_ll_tautau.root\",\n",
+    "    \"ZWW4l\" : \"/work/project/escience/ruttho/FCC-ee_SimpleDelphesAnalysis/EventSample/ZWWFourLepton_1M_Seed30/ZWWFourLepton_1M_Seed30.root\"\n",
+    "    }\n",
     "\n",
     "columns = [\n",
     "    \"MissingET_size\", \"MissingET.Eta\", \"MissingET.Phi\", \"MissingET.MET\",\n",
@@ -81,6 +82,96 @@
     "]\n",
     "\n",
     "raw_data = load_data(file_paths, \"Delphes\", columns, MAX_EVENTS)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "daa58eae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_files = raw_data[\"HLFV_160GeV\"]\n",
+    "cutstatus={}\n",
+    "cutstatus[\"LestLeptonPT10GeV\"] = ak.all(target_files[\"Electron.PT\"] > 10, axis=1) & ak.all(target_files[\"Muon.PT\"] > 10, axis=1)\n",
+    "    # secondt cut: exactly 4 leptons\n",
+    "cutstatus[\"4LepEvent\"] = (target_files[\"Electron_size\"] + target_files[\"Muon_size\"] == 4) & cutstatus[\"LestLeptonPT10GeV\"]\n",
+    "# third cut: odd number leptons\n",
+    "cutstatus[\"OddNumberLep\"] = (target_files[\"Electron_size\"] % 2 != 0) & (target_files[\"Muon_size\"] % 2 != 0) & cutstatus[\"4LepEvent\"]\n",
+    "# fourth cut: non charge-violation\n",
+    "cutstatus[\"NonChargeViolation\"] = (ak.prod(target_files[\"Electron.Charge\"], axis=1) * ak.prod(target_files[\"Muon.Charge\"],axis=1) == 1\n",
+    "                                )&(ak.sum(target_files[\"Electron.Charge\"],axis=1)+ak.sum(target_files[\"Muon.Charge\"],axis=1) == 0\n",
+    "                                    )&(ak.all(target_files[\"Electron.Charge\"],axis=1)&ak.all(target_files[\"Muon.Charge\"],axis=1)\n",
+    "                                    )&(cutstatus[\"OddNumberLep\"] == 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "99201471",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Based_for_pairing=target_files[cutstatus[\"NonChargeViolation\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "af722021",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre>[{MissingET_size: 1, &#x27;MissingET.Eta&#x27;: [-0.537], &#x27;MissingET.Phi&#x27;: [2.4], ...},\n",
+       " {MissingET_size: 1, &#x27;MissingET.Eta&#x27;: [-0.404], &#x27;MissingET.Phi&#x27;: [-2.06], ...},\n",
+       " {MissingET_size: 1, &#x27;MissingET.Eta&#x27;: [-0.119], &#x27;MissingET.Phi&#x27;: [1.85], ...},\n",
+       " {MissingET_size: 1, &#x27;MissingET.Eta&#x27;: [-0.0323], &#x27;MissingET.Phi&#x27;: [0.849], ...},\n",
+       " {MissingET_size: 1, &#x27;MissingET.Eta&#x27;: [-0.0049], &#x27;MissingET.Phi&#x27;: [-2.24], ...},\n",
+       " {MissingET_size: 1, &#x27;MissingET.Eta&#x27;: [-1.03], &#x27;MissingET.Phi&#x27;: [-0.162], ...},\n",
+       " {MissingET_size: 1, &#x27;MissingET.Eta&#x27;: [1.95], &#x27;MissingET.Phi&#x27;: [-1.89], ...},\n",
+       " {MissingET_size: 1, &#x27;MissingET.Eta&#x27;: [-0.474], &#x27;MissingET.Phi&#x27;: [-0.369], ...},\n",
+       " {MissingET_size: 1, &#x27;MissingET.Eta&#x27;: [0.275], &#x27;MissingET.Phi&#x27;: [1.47], ...},\n",
+       " {MissingET_size: 1, &#x27;MissingET.Eta&#x27;: [-1.71], &#x27;MissingET.Phi&#x27;: [0.825], ...},\n",
+       " ...,\n",
+       " {MissingET_size: 1, &#x27;MissingET.Eta&#x27;: [0.497], &#x27;MissingET.Phi&#x27;: [2.49], ...},\n",
+       " {MissingET_size: 1, &#x27;MissingET.Eta&#x27;: [-0.223], &#x27;MissingET.Phi&#x27;: [2.56], ...},\n",
+       " {MissingET_size: 1, &#x27;MissingET.Eta&#x27;: [-0.743], &#x27;MissingET.Phi&#x27;: [2.56], ...},\n",
+       " {MissingET_size: 1, &#x27;MissingET.Eta&#x27;: [-0.0183], &#x27;MissingET.Phi&#x27;: [0.409], ...},\n",
+       " {MissingET_size: 1, &#x27;MissingET.Eta&#x27;: [-1.8], &#x27;MissingET.Phi&#x27;: [-0.601], ...},\n",
+       " {MissingET_size: 1, &#x27;MissingET.Eta&#x27;: [-0.138], &#x27;MissingET.Phi&#x27;: [-2.28], ...},\n",
+       " {MissingET_size: 1, &#x27;MissingET.Eta&#x27;: [0.886], &#x27;MissingET.Phi&#x27;: [2.74], ...},\n",
+       " {MissingET_size: 1, &#x27;MissingET.Eta&#x27;: [-0.586], &#x27;MissingET.Phi&#x27;: [1.1], ...},\n",
+       " {MissingET_size: 1, &#x27;MissingET.Eta&#x27;: [0.754], &#x27;MissingET.Phi&#x27;: [2.79], ...}]\n",
+       "--------------------------------------------------------------------------------\n",
+       "backend: cpu\n",
+       "nbytes: 2.5 MB\n",
+       "type: 5851 * {\n",
+       "    MissingET_size: int32,\n",
+       "    &quot;MissingET.Eta&quot;: var * float32,\n",
+       "    &quot;MissingET.Phi&quot;: var * float32,\n",
+       "    &quot;MissingET.MET&quot;: var * float32,\n",
+       "    Jet_size: int32,\n",
+       "    &quot;Jet.Phi&quot;: var * float32,\n",
+       "    &quot;Jet.Eta&quot;: var * float32,\n",
+       "    &quot;Jet.PT&quot;: var * float32,\n",
+       "    &quot;Jet.Mass&quot;: var * float32,\n",
+       "    Electron_size: int32,\n",
+       "    ...\n",
+       "}</pre>"
+      ],
+      "text/plain": [
+       "<Array [{MissingET_size: 1, ...}, ..., {...}] type='5851 * {MissingET_size:...'>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Based_for_pairing"
    ]
   },
   {
@@ -894,6 +985,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
